Translate storage fixed

--- a/src/main/resources/public/translations/en.json
+++ b/src/main/resources/public/translations/en.json
@@ -11,8 +11,22 @@
 	"APP_LOGIN_USERNAME" : "Username",
 	"APP_LOGIN_PASSWORD" : "Password",
 	"APP_LOGIN_TO" : "Login to",
-	"APP_LOGIN_CANCEL" : "Cancel",
 	"APP_LOGIN_SUCCESS" : "Are you logged in",
 	"APP_LOGOUT_SUCCESS" : "You have been logged out",
-	"APP_LOGIN_BAD": "Invalid username or password"
+	"APP_LOGIN_BAD" : "Invalid username or password",
+	"EDIT_BUILDING_DETAILS" : "Edit building details:",
+	"ADD_BUILDING_DETAILS" : "Add new building:",
+	"EDIT_BUILDING_ID": "Id",
+	"EDIT_BUILDING_NAME": "Name",
+	"APP_SAVE": "Save",
+	"APP_CANCEL": "Cancel",
+	"FORM_SUBMISSION_FAILED": "Form submission failed, please see details below.",
+	"FORM_ERROR_FIELD_SHORT": "Field is too short or missing.",
+	"APP_NOT_LOGGED_IN": "You are not logged in.",
+	"ADD_BUILDING" : "Add building",
+	"BUILDING_LIST" : "Building list",
+	"BUILDING_DETAILS": "Building details",
+	"ADDRESS": "Address",
+	"APP_BACK" : "Back",
+	"APP_EDIT": "Edit"
 }
