Address creation not working yet

--- a/src/main/resources/public/translations/en.json
+++ b/src/main/resources/public/translations/en.json
@@ -16,17 +16,26 @@
 	"APP_LOGIN_BAD" : "Invalid username or password",
 	"EDIT_BUILDING_DETAILS" : "Edit building details:",
 	"ADD_BUILDING_DETAILS" : "Add new building:",
-	"EDIT_BUILDING_ID": "Id",
-	"EDIT_BUILDING_NAME": "Name",
-	"APP_SAVE": "Save",
-	"APP_CANCEL": "Cancel",
-	"FORM_SUBMISSION_FAILED": "Form submission failed, please see details below.",
-	"FORM_ERROR_FIELD_SHORT": "Field is too short or missing.",
-	"APP_NOT_LOGGED_IN": "You are not logged in.",
+	"EDIT_ID" : "Id",
+	"EDIT_BUILDING_NAME" : "Name",
+	"APP_SAVE" : "Save",
+	"APP_CANCEL" : "Cancel",
+	"FORM_SUBMISSION_FAILED" : "Form submission failed, please see details below.",
+	"FORM_ERROR_FIELD_SHORT" : "Field is too short or missing.",
+	"APP_NOT_LOGGED_IN" : "You are not logged in.",
 	"ADD_BUILDING" : "Add building",
 	"BUILDING_LIST" : "Building list",
-	"BUILDING_DETAILS": "Building details",
-	"ADDRESS": "Address",
+	"BUILDING_DETAILS" : "Building details",
+	"ADDRESS" : "Address",
 	"APP_BACK" : "Back",
-	"APP_EDIT": "Edit"
+	"APP_EDIT" : "Edit",
+	"APP_EDIT_ADDRESS" : "Edit address",
+	"EDIT_ADDRESS_DETAILS" : "Edit address",
+	"ADDRESS_STREET" : "Street",
+	"ADDRESS_NUMBER" : "Number",
+	"ADDRESS_APPARTMENT" : "Apparment",
+	"ADDRESS_POSTAL_CODE" : "Postal code",
+	"ADDRESS_CITY" : "City",
+	"ADDRESS_STATE" : "State",
+	"ADDRESS_COUNTRY" : "Country"
 }
