--- a/src/main/resources/public/translations/rs.json
+++ b/src/main/resources/public/translations/rs.json
@@ -13,20 +13,29 @@
 	"APP_LOGIN_TO" : "Uloguj se u",
 	"APP_LOGIN_SUCCESS" : "Ulogovani ste",
 	"APP_LOGOUT_SUCCESS" : "Izlogovani ste",
-	"APP_LOGIN_BAD": "Korisničko ime ili lozinka su neispravni",
+	"APP_LOGIN_BAD" : "Korisničko ime ili lozinka su neispravni",
 	"EDIT_BUILDING_DETAILS" : "Izmena detalja zgrade:",
 	"ADD_BUILDING_DETAILS" : "Dodaj novu zgradu:",
-	"EDIT_BUILDING_ID": "Id",
-	"EDIT_BUILDING_NAME": "Naziv",
-	"APP_SAVE": "Snimi",
-	"APP_CANCEL": "Otkaži",
-	"FORM_SUBMISSION_FAILED": "Slanje forme nije uspelo, pogledajte detalje ispod.",
-	"FORM_ERROR_FIELD_SHORT": "Polje je prekratko ili nedostaje.",
-	"APP_NOT_LOGGED_IN": "Niste ulogovani.",
+	"EDIT_ID" : "Id",
+	"EDIT_BUILDING_NAME" : "Naziv",
+	"APP_SAVE" : "Snimi",
+	"APP_CANCEL" : "Otkaži",
+	"FORM_SUBMISSION_FAILED" : "Slanje forme nije uspelo, pogledajte detalje ispod.",
+	"FORM_ERROR_FIELD_SHORT" : "Polje je prekratko ili nedostaje.",
+	"APP_NOT_LOGGED_IN" : "Niste ulogovani.",
 	"ADD_BUILDING" : "Dodaj zgradu",
 	"BUILDING_LIST" : "Lista zgrada",
-	"BUILDING_DETAILS": "Detalji zgrade",
-	"ADDRESS": "Adresa",
+	"BUILDING_DETAILS" : "Detalji zgrade",
+	"ADDRESS" : "Adresa",
 	"APP_BACK" : "Nazad",
-	"APP_EDIT": "Izmeni"
+	"APP_EDIT" : "Izmeni",
+	"APP_EDIT_ADDRESS" : "Izmeni adresu",
+	"EDIT_ADDRESS_DETAILS" : "Izmeni adresu",
+	"ADDRESS_STREET" : "Ulica",
+	"ADDRESS_NUMBER" : "Broj",
+	"ADDRESS_APPARTMENT" : "Stan",
+	"ADDRESS_POSTAL_CODE" : "Poštanski broj",
+	"ADDRESS_CITY" : "Grad",
+	"ADDRESS_STATE" : "Država",
+	"ADDRESS_COUNTRY" : "Zemlja"
 }
