Lang switch working

--- a/src/main/resources/dev_public/js/locales/rs.json
+++ b/src/main/resources/dev_public/js/locales/rs.json
@@ -1,3 +1,46 @@
 {
-	not_logged_in : "Niste ulogovani."
+	"APP_TITLE" : "Kućni savet 7",
+	"APP_LANGUAGE" : "Jezik {{langCd}}",
+	"APP_LANG_CURRENT" : "Srpski",
+	"APP_LANG_ENGLISH" : "Engleski",
+	"APP_LANG_SERBIAN" : "Srpski",
+	"APP_LOGIN_AS" : "Ulogovan kao korisnik:",
+	"APP_LOGIN_LOGIN" : "Uloguj se",
+	"APP_LOGIN_LOGOUT" : "Izloguj se",
+	"APP_NAV_TOGGLE" : "Uključi/isključi navigaciju",
+	"APP_LOGIN_USERNAME" : "Korisničko ime",
+	"APP_LOGIN_PASSWORD" : "Lozinka",
+	"APP_LOGIN_TO" : "Uloguj se u",
+	"APP_LOGIN_SUCCESS" : "Ulogovani ste",
+	"APP_LOGOUT_SUCCESS" : "Izlogovani ste",
+	"APP_LOGIN_BAD" : "Korisničko ime ili lozinka su neispravni",
+  "APP_UNEXPECTED_SERVER_RESPONSE": "Neocekivani odgovor od servera!",
+	"EDIT_BUILDING_DETAILS" : "Izmena detalja zgrade:",
+	"ADD_BUILDING_DETAILS" : "Dodaj novu zgradu:",
+	"EDIT_ID" : "Id",
+	"EDIT_BUILDING_NAME" : "Naziv",
+	"APP_SAVE" : "Snimi",
+	"APP_CANCEL" : "Otkaži",
+	"FORM_SUBMISSION_FAILED" : "Slanje forme nije uspelo, pogledajte detalje ispod.",
+	"FORM_ERROR_FIELD_SHORT" : "Polje je prekratko ili nedostaje.",
+	"APP_NOT_LOGGED_IN" : "Niste ulogovani.",
+	"ADD_BUILDING" : "Dodaj zgradu",
+	"BUILDING_LIST" : "Lista zgrada",
+	"BUILDING_DETAILS" : "Detalji zgrade",
+	"ADDRESS" : "Adresa",
+	"APP_BACK" : "Nazad",
+	"APP_EDIT" : "Izmeni",
+	"APP_EDIT_ADDRESS" : "Izmeni adresu",
+	"EDIT_ADDRESS_DETAILS" : "Izmeni adresu",
+	"ADDRESS_STREET" : "Ulica",
+	"ADDRESS_NUMBER" : "Broj",
+	"ADDRESS_APPARTMENT" : "Stan",
+	"ADDRESS_POSTAL_CODE" : "Poštanski broj",
+	"ADDRESS_CITY" : "Grad",
+	"ADDRESS_STATE" : "Država",
+	"ADDRESS_COUNTRY" : "Zemlja",
+	"NAVIGATE_PREIVIOUS" : "Prethodna",
+	"NAVIGATE_NEXT": "Sledeća",
+	"NAVIGATE_FIRST" : "Prva",
+	"NAVIGATE_LAST" : "Poslednja"
 }
