--- a/src/main/resources/dev_public/js/locales/en.json
+++ b/src/main/resources/dev_public/js/locales/en.json
@@ -1,3 +1,46 @@
 {
-	not_logged_in : "You are not logged in."
+	"APP_TITLE" : "Savet7",
+	"APP_LANGUAGE" : "Language {{langCd}}",
+	"APP_LANG_CURRENT" : "English",
+	"APP_LANG_ENGLISH" : "English",
+	"APP_LANG_SERBIAN" : "Serbian",
+	"APP_LOGIN_AS" : "Logged in as:",
+	"APP_LOGIN_LOGIN" : "Login",
+	"APP_LOGIN_LOGOUT" : "Logout",
+	"APP_NAV_TOGGLE" : "Toggle navigation",
+	"APP_LOGIN_USERNAME" : "Username",
+	"APP_LOGIN_PASSWORD" : "Password",
+	"APP_LOGIN_TO" : "Login to",
+	"APP_LOGIN_SUCCESS" : "You are logged in",
+	"APP_LOGOUT_SUCCESS" : "You have been logged out",
+	"APP_LOGIN_BAD" : "Invalid username or password",
+	"APP_UNEXPECTED_SERVER_RESPONSE": "Unexpected server response!",
+	"EDIT_BUILDING_DETAILS" : "Edit building details:",
+	"ADD_BUILDING_DETAILS" : "Add new building:",
+	"EDIT_ID" : "Id",
+	"EDIT_BUILDING_NAME" : "Name",
+	"APP_SAVE" : "Save",
+	"APP_CANCEL" : "Cancel",
+	"FORM_SUBMISSION_FAILED" : "Form submission failed, please see details below.",
+	"FORM_ERROR_FIELD_SHORT" : "Field is too short or missing.",
+	"APP_NOT_LOGGED_IN" : "You are not logged in.",
+	"ADD_BUILDING" : "Add building",
+	"BUILDING_LIST" : "Building list",
+	"BUILDING_DETAILS" : "Building details",
+	"ADDRESS" : "Address",
+	"APP_BACK" : "Back",
+	"APP_EDIT" : "Edit",
+	"APP_EDIT_ADDRESS" : "Edit address",
+	"EDIT_ADDRESS_DETAILS" : "Edit address",
+	"ADDRESS_STREET" : "Street",
+	"ADDRESS_NUMBER" : "Number",
+	"ADDRESS_APPARTMENT" : "Apparment",
+	"ADDRESS_POSTAL_CODE" : "Postal code",
+	"ADDRESS_CITY" : "City",
+	"ADDRESS_STATE" : "State",
+	"ADDRESS_COUNTRY" : "Country",
+	"NAVIGATE_PREIVIOUS" : "Previous",
+	"NAVIGATE_NEXT": "Next",
+	"NAVIGATE_FIRST" : "First",
+	"NAVIGATE_LAST" : "Last"
 }
