Listing buildings works now.

--- a/src/main/resources/dev_public/js/locales/en.json
+++ b/src/main/resources/dev_public/js/locales/en.json
@@ -4,9 +4,10 @@
 	"APP_LANG_CURRENT" : "English",
 	"APP_LANG_ENGLISH" : "English",
 	"APP_LANG_SERBIAN" : "Serbian",
-	"APP_LOGIN_AS" : "Logged in as:",
+	"APP_LOGIN_AS" : "Logged in as",
 	"APP_LOGIN_LOGIN" : "Login",
 	"APP_LOGIN_LOGOUT" : "Logout",
+	"APP_CLOSE" : "Close",
 	"APP_NAV_TOGGLE" : "Toggle navigation",
 	"APP_LOGIN_USERNAME" : "Username",
 	"APP_LOGIN_PASSWORD" : "Password",
