--- a/src/main/resources/dev_public/js/locales/rs.json
+++ b/src/main/resources/dev_public/js/locales/rs.json
@@ -4,9 +4,10 @@
 	"APP_LANG_CURRENT" : "Srpski",
 	"APP_LANG_ENGLISH" : "Engleski",
 	"APP_LANG_SERBIAN" : "Srpski",
-	"APP_LOGIN_AS" : "Ulogovan kao korisnik:",
+	"APP_LOGIN_AS" : "Ulogovan kao korisnik",
 	"APP_LOGIN_LOGIN" : "Uloguj se",
 	"APP_LOGIN_LOGOUT" : "Izloguj se",
+	"APP_CLOSE" : "Zatvori",
 	"APP_NAV_TOGGLE" : "Uključi/isključi navigaciju",
 	"APP_LOGIN_USERNAME" : "Korisničko ime",
 	"APP_LOGIN_PASSWORD" : "Lozinka",
